syntax = "proto3";

package v1;

import "third_party/tagger/tagger.proto";

option go_package = "./v1;api_v1";

message ProjectCreateRequest{
    string title = 1;
}

message ProjectCreateResponse{
    int64 id = 1;
}

message ProjectListRequest{}

message ProjectListResponse{
    message Item{
        int64 id = 1;
        string title = 2;
    }

    repeated Item items = 1;
}

message ProjectTaskCreateRequest{
    int64 project_id = 1 [(tagger.tags) = "form:\"project_id\" binding:\"required\""];
    string title = 2;
    string description = 3;
}

message ProjectTaskCreateResponse{
    int64 id = 1;
}

message ProjectTaskRequest{
    int64 project_id = 1 [(tagger.tags) = "form:\"project_id\" binding:\"required\""];
}

message ProjectTaskResponse{
    message Tasks{
        int64 id = 1;
        string title = 2;
    }

    message Categories{
        int64 id = 1;
        string title = 2;
        repeated Tasks tasks = 3;
    }

    repeated Categories categories = 1;
}

message ProjectTaskMoveRequest{
    int64 project_id = 1 [(tagger.tags) = "form:\"project_id\" binding:\"required\""];
    int64 task_id = 2 [(tagger.tags) = "form:\"task_id\" binding:\"required\""];
    int64 from_id = 3 [(tagger.tags) = "form:\"from_id\" binding:\"required\""];
    int64 to_id = 4 [(tagger.tags) = "form:\"to_id\" binding:\"required\""];
}

message ProjectTaskMoveResponse{}


message ProjectCommentCreateRequest{
    int64 task_id = 1 [(tagger.tags) = "form:\"task_id\" binding:\"required\""];
    string comment = 2;
}

message ProjectCommentCreateResponse{
    int64 id = 1;
}

message ProjectCommentRequest{
    int64 task_id = 1 [(tagger.tags) = "form:\"task_id\" binding:\"required\""];
}

message ProjectCommentResponse{
    message Item{
        int64 id = 1;
        string comment = 2;
    }

    repeated Item items = 1;
}
